Added Library and updated Events and Checkout page

--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Create.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Create.cshtml
@@ -43,6 +43,11 @@
                 <span asp-validation-for="Publisher" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IsDownloadable" class="control-label"></label>
+                <input asp-for="IsDownloadable" class="form-control" />
+                <span asp-validation-for="IsDownloadable" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="File" class="control-label"></label>
                 <input asp-for="File" class="form-control" />
             </div>
