--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
                     <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
                     <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
+                    <li><a asp-area="" asp-controller="Library" asp-action="Index">Library</a></li>
 
                     @if (User.Identity.IsAuthenticated)
                     {
