--- a/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
@@ -3,14 +3,13 @@
     ViewData["Title"] = "Checkout";
 }
 
-<h2>Thank you for making a purchease!</h2>
+<h2>Thank you for making a purchase!</h2>
 
 <div class="container">
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-3">
             <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Index", "Game")'">Back to Games</button>
-            <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Game")'">Download Games</button>
         </div>
         <div class="col-md-3"></div>
     </div>
