--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Edit.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Edit.cshtml
@@ -42,6 +42,11 @@
                 <input asp-for="Publisher" class="form-control" />
                 <span asp-validation-for="Publisher" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="IsDownloadable" class="control-label"></label>
+                <input asp-for="IsDownloadable" class="form-control" />
+                <span asp-validation-for="IsDownloadable" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="RecordId" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
