--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -44,22 +44,37 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Game" asp-action="Index">Games</a></li>
-                    <li><a asp-area="" asp-controller="Event" asp-action="Index">Events</a></li>
-                    <li><a asp-area="" asp-controller="Wishlist" asp-action="Index" asp-route-id="">Wishlist</a></li>
-                    <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
-                    <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
-                    <li><a asp-area="" asp-controller="Library" asp-action="Index">Library</a></li>
-
                     @if (User.Identity.IsAuthenticated)
                     {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Game" asp-action="Index">Games</a></li>
+                        <li><a asp-area="" asp-controller="Event" asp-action="Index">Events</a></li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-area="" asp-controller="Wishlist" asp-action="Index" asp-route-id="">Wishlist</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
+                                <li><a asp-area="" asp-controller="Library" asp-action="Index">Library</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
+                                <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
+
+                            </ul>
+                        </li>
+
                         if (User.IsInRole("Employee"))
                         {
-                            <li><a asp-area="" asp-controller="Roles" asp-action="Index">Roles</a></li>
-                            <li><a asp-area="" asp-controller="GameReport" asp-action="Index">Game Report</a></li>
-                            <li><a asp-area="" asp-controller="EventReport" asp-action="Index">Event Report</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Employee <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a asp-area="" asp-controller="Roles" asp-action="Index">Roles</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a asp-area="" asp-controller="GameReport" asp-action="Index">Game Report</a></li>
+                                    <li><a asp-area="" asp-controller="EventReport" asp-action="Index">Event Report</a></li>
+                                </ul>
+                            </li>
                         }
 
                         if (User.IsInRole("Moderator"))
