--- a/src/ConestogaVirtualGameStore.Web/Views/Manage/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Manage/Index.cshtml
@@ -35,6 +35,79 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
+            
+            <div class="form-group">
+                <label asp-for="FirstName"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="LastName"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="AddressA"></label>
+                <input asp-for="AddressA" class="form-control" />
+                <span asp-validation-for="AddressA" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="AddressB"></label>
+                <input asp-for="AddressB" class="form-control" />
+                <span asp-validation-for="AddressB" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="Province"></label>
+                <input asp-for="Province" class="form-control" />
+                <span asp-validation-for="Province" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="PostalCode"></label>
+                <input asp-for="PostalCode" class="form-control" />
+                <span asp-validation-for="PostalCode" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="NameOnCreditCard"></label>
+                <input asp-for="NameOnCreditCard" class="form-control" />
+                <span asp-validation-for="NameOnCreditCard" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="CreditCard"></label>
+                <input asp-for="CreditCard" class="form-control" />
+                <span asp-validation-for="CreditCard" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="ExpiryMonth"></label>
+                <input asp-for="ExpiryMonth" class="form-control" />
+                <span asp-validation-for="ExpiryMonth" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="ExpiryYear"></label>
+                <input asp-for="ExpiryYear" class="form-control" />
+                <span asp-validation-for="ExpiryYear" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="Ccv"></label>
+                <input asp-for="Ccv" class="form-control" />
+                <span asp-validation-for="Ccv" class="text-danger"></span>
+            </div>
+
             <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
