--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -56,11 +56,12 @@
                                 <li><a asp-area="" asp-controller="Wishlist" asp-action="Index" asp-route-id="">Wishlist</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
-                                <li><a asp-area="" asp-controller="Library" asp-action="Index">Library</a></li>
+                                <li><a asp-area="" asp-controller="Library" asp-action="Index">Game Collection</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
-                                <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
-
+                                <li><a asp-area="" asp-controller="Friends" asp-action="Index">My Friends</a></li>
+                                <li><a asp-area="" asp-controller="Users" asp-action="Index">Find Friends</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Update Account</a></li>
                             </ul>
                         </li>
 
@@ -73,6 +74,12 @@
                                     <li role="separator" class="divider"></li>
                                     <li><a asp-area="" asp-controller="GameReport" asp-action="Index">Game Report</a></li>
                                     <li><a asp-area="" asp-controller="EventReport" asp-action="Index">Event Report</a></li>
+                                    <li><a asp-area="" asp-controller="GameDetailReport" asp-action="Index">Game Detail Report</a></li>
+                                    <li><a asp-area="" asp-controller="MemberListReport" asp-action="Index">Member List Report</a></li>
+                                    <li><a asp-area="" asp-controller="MemberDetailReport" asp-action="Index">Member Detail Report</a></li>
+                                    <li><a asp-area="" asp-controller="WishlistReport" asp-action="Index">Wishlist Report</a></li>
+                                    <li><a asp-area="" asp-controller="SalesReport" asp-action="Index">Sales Report</a></li>
+                                    <li><a asp-area="" asp-controller="EmployeeEarningsReport" asp-action="Index">Employee Earnings Report</a></li>
                                 </ul>
                             </li>
                         }
