--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <button style="padding-right: 26px;" type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
         </ul>
     </form>
