--- a/src/ConestogaVirtualGameStore.Web/Views/Account/Lockout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Account/Lockout.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Locked out";
+    ViewData["Title"] = "Account Deleted";
 }
 
 <header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <br/>
+    <br />
+    <p class="text-danger">This account has been deleted.</p>
 </header>
