--- a/src/ConestogaVirtualGameStore.Web/Views/Manage/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Manage/Index.cshtml
@@ -110,6 +110,9 @@
 
             <button type="submit" class="btn btn-default">Save</button>
         </form>
+        
+        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("DeleteConfirm", "Manage")'">Delete Account</button>
+
     </div>
 </div>
 
