Fixing bugs found by the team testers

--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Edit.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConestogaVirtualGameStore.Web.Models.Game
+﻿@model ConestogaVirtualGameStore.Web.Models.ViewModels.GameEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -47,7 +47,12 @@
                 <input asp-for="IsDownloadable" class="form-control" />
                 <span asp-validation-for="IsDownloadable" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="File" class="control-label"></label>
+                <input asp-for="File" class="form-control" />
+            </div>
             <input type="hidden" asp-for="RecordId" />
+            <input type="hidden" asp-for="ImageFileName" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
