Fixed Moderator Functionality

--- a/src/ConestogaVirtualGameStore.Web/Views/Reviews/Create.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Reviews/Create.cshtml
@@ -36,6 +36,13 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    @if (User.Identity.IsAuthenticated)
+    {
+        if (User.IsInRole("Moderator"))
+        {
+            <a asp-action="Index">Back to Reviews List</a> @:|
+        }
+    }
+    <a asp-action="Details" asp-controller="Game" asp-route-id="@ViewData["GameId"]">Back to Game</a>
 </div>
 
